# SkyPro_course_project_4

./: README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
message_broadcasting/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
message_broadcasting/migrations/: 0001_initial.py  0002_userprofile.py  0003_attempt_server_response.py
message_broadcasting/templates/: base.html  mailing_list.html  navigation.html
message_broadcasting/templates/account/: email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
message_broadcasting/templates/mailing/: home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html  navigation.html  recipient_confirm_delete.html  recipient_form.html  recipient_list.html  user_list.html
